# BoilerSwap

./: .env  .env.local  README.md
backend/: Cargo.toml
backend/src/: api.rs  config.rs  database.rs  db.rs  error.rs  main.rs  redis.rs  state.rs
backend/src/api/: consumer.rs  database.rs  handlers.rs  meilisearch.rs  mod.rs  models.rs  redis.rs  schema.rs  sessions.rs  twofactor.rs  utilities.rs  verify.rs
deploy/: docker-build.main.yml  docker-swarm.main.local.yml
deploy/caddy/: Dockerfile
deploy/caddy/config/: Caddyfile.local
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/: AppState.svelte.ts  auth.ts  meiliClient.ts  models.ts  utils.ts
frontend/src/lib/components/: Footer.svelte  ItemCard.svelte  NavBar.svelte  ProductCard.svelte
frontend/src/lib/components/about/: Impact.svelte  Mission.svelte
frontend/src/lib/components/auth/: AuthFlow.svelte  Email.svelte  Password.svelte
frontend/src/lib/components/browse/: BrowseSearch.svelte  Items.svelte  PageButtons.svelte  Products.svelte
frontend/src/lib/helpers/: auth.ts  utils.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/auth/: +page.server.ts  +page.svelte
frontend/src/routes/browse/: +page.svelte
frontend/src/routes/contact/: +page.svelte
frontend/src/routes/disclaimer/: +page.svelte
frontend/src/routes/faq/: +page.svelte
frontend/src/routes/help-center/: +page.svelte
frontend/src/routes/how-it-works/: +page.svelte
frontend/src/routes/post/: +page.svelte
frontend/src/routes/report-issue/: +page.svelte
frontend/src/routes/safety-guidelines/: +page.svelte
monitor/: docker-swarm.monitor.local.yml  prometheus_config.local.yml  prometheus_config.yml
monitor/grafana/dashboards/: boilerswap.json
(+14 files in other folders)
