[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7" }
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1"
prometheus = "0.13"
rand = "0.9.1"
regex = "1"
scylla = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
