[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7" }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
lettre = { version = "0.11.17", features=["tokio1", "smtp-transport", "builder", "tokio1-native-tls"] }
once_cell = "1"
prometheus = "0.13"
rand = "0.8"
redis = { version = "0.32.0", features = ["tokio-comp", "connection-manager"] }
regex = "1"
scylla = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
